tests/invalid/assign_to_const.comp.hlsl
[numthreads(1,1,1)]
void main()
{
    const float const_float = 1.0f;
    const_float = 32.0;
}
